--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "supertest": "^6.0.0"
   },
   "dependencies": {
+    "chance": "^1.1.7",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.4.2"
